fix hamberger z-index

--- a/MusicSchool/_assets/scss/object/component/_hamburger.scss
+++ b/MusicSchool/_assets/scss/object/component/_hamburger.scss
@@ -56,7 +56,7 @@
     width: 300px;
     position: fixed;
     right: 0;
-    z-index: 1;
+    z-index: 10;
     display: none;
     &.active{
         display: block;
